--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.mail.username=Your Email
 spring.mail.password=Your App Password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+CLOUDINARY_URL=cloudinary://289133591992525:7DCImx3QCwjki1LTbEWDz4mlA0s@djkyoabl5
